# chir.rs

./: .gitignore  .gitmodules  .hlint.yaml  Cargo.nix  Cargo.toml  README.md  chir-rs.cabal  deny.toml  example.dhall  flake.nix  justfile  stack.yaml
.github/workflows/: audit.yaml  ci.yaml  update-cargo-nix.yaml  update-flake.yaml
app/: Main.hs
components/auth/: Cargo.toml  build.rs  config-example.dhall  sqlx-data.json
components/auth-model/: Cargo.toml
components/auth-model/src/: lib.rs
components/auth-web/: Cargo.toml  index.html  index.js  serve.py
components/auth-web/src/: main.rs  register.rs
components/auth/migrations/: 20230114161545_auth_migration.up.sql  20230212075230_switch-away-from-uuid.up.sql
components/auth/migrations/2022-12-06-100155_auth_migration/: down.sql  up.sql
components/auth/src/: id_generator.rs  kv.rs  main.rs  models.rs  schema.rs  session.rs  token.rs
components/auth/src/opaque/: login.rs  mod.rs  registration.rs
components/auth/src/webauthn/: login.rs  mod.rs  registration.rs
config/: models.persistentmodels  routes.yesodroutes
lib/ld-microformats/: Cargo.toml
lib/ld-microformats/src/: lib.rs  tests.rs
lib/ld-microformats/src/tests/microformats-mixed/h-card/: change-log.html.json  mixedproperties.html.json  tworoots.html.json
lib/ld-microformats/src/tests/microformats-mixed/h-entry/: change-log.html.json  mixedroots.html.json
lib/ld-microformats/src/tests/microformats-mixed/h-resume/: change-log.html.json  mixedroots.html.json
lib/ld-microformats/src/tests/microformats-v2/h-adr/: change-log.html.json  geo.html.json  geourl.html.json  justaname.html.json  lettercase.html.json  simpleproperties.html.json
lib/ld-microformats/src/tests/microformats-v2/h-card/: baseurl.html.json  change-log.html.json  childimplied.html.json  extendeddescription.html.json  hcard.html.json  hyperlinkedphoto.html.json  impliedname.html.json  impliedphoto.html.json  impliedurl.html.json  impliedurlempty.html.json  justahyperlink.html.json  nested.html.json  p-property.html.json  relativeurls.html.json  relativeurlsempty.html.json
lib/ld-microformats/src/tests/microformats-v2/h-entry/: change-log.html.json  encoding.html.json  impliedname.html.json  impliedvalue-nested.html.json  justahyperlink.html.json  justaname.html.json  scriptstyletags.html.json  summarycontent.html.json  u-property.html.json  urlincontent.html.json
lib/ld-microformats/src/tests/microformats-v2/h-event/: ampm.html.json  attendees.html.json  change-log.html.json  combining.html.json  dates.html.json  dt-property.html.json  justahyperlink.html.json  justaname.html.json  time.html.json
lib/ld-microformats/src/tests/microformats-v2/h-feed/: implied-title.html.json  simple.html.json
lib/ld-microformats/src/tests/microformats-v2/h-geo/: abbrpattern.html.json  altitude.html.json  change-log.html.json  hidden.html.json  justaname.html.json  simpleproperties.html.json
lib/ld-microformats/src/tests/microformats-v2/h-product/: aggregate.html.json  change-log.html.json  justahyperlink.html.json  justaname.html.json  simpleproperties.html.json
lib/ld-microformats/src/tests/microformats-v2/h-recipe/: all.html.json  change-log.html.json  minimum.html.json
lib/ld-microformats/src/tests/microformats-v2/h-resume/: affiliation.html.json  change-log.html.json  contact.html.json  education.html.json  justaname.html.json  skill.html.json  work.html.json
lib/ld-microformats/src/tests/microformats-v2/h-review/: change-log.html.json  hyperlink.html.json  implieditem.html.json  item.html.json  justaname.html.json  photo.html.json  vcard.html.json
lib/ld-microformats/src/tests/microformats-v2/h-review-aggregate/: change-log.html.json  hevent.html.json  justahyperlink.html.json  simpleproperties.html.json
lib/ld-microformats/src/tests/microformats-v2/mixed/: change-log.html.json  id.html.json  ignoretemplate.html.json  vendorprefix.html.json  vendorprefixproperty.html.json
lib/ld-microformats/src/tests/microformats-v2/rel/: change-log.html.json  duplicate-rels.html.json  license.html.json  nofollow.html.json  rel-urls.html.json  varying-text-duplicate-rels.html.json  xfn-all.html.json  xfn-elsewhere.html.json
lib/microformats-parser/: Cargo.toml
messages/: de.msg  en.msg  fr.msg  jbo.msg  jbo@ZLR.msg  nl.msg  tok.msg  tok@SP.msg
overlays/: riscv.nix
src/: Application.hs  Config.hs  Foundation.hs  Main.hs  Model.hs  Utils.hs  devel.hs
src/Codec/CBOR/: Class.hs
src/Components/: Image.hs
src/Config/: Images.hs  StaticFiles.hs
src/Control/: Alternative.hs  ToEither.hs
src/Crypto/: FidoMetadataManager.hs  KeyStore.hs
src/Crypto/Auth/: Token.hs
src/Crypto/KeyStore/: Types.hs
src/Data/: Queue.hs
src/Database/Persist/: Mixed.hs  Model.hs
src/Handler/: FinishRegistration.hs  Home.hs  OauthJwks.hs  OauthMetadata.hs  Register.hs  StartRegistration.hs  WebauthnChallenge.hs  Webfinger.hs
src/Model/: Migration.hs
src/Network/: Microformats2.hs  Webfinger.hs
src/Network/URL/: Normalize.hs
src/Network/Webfinger/: Link.hs
src/Text/: Internationalisation.hs  Lojban.hs  TokiPona.hs  TokiPona.phs
src/Text/Internationalisation/: Deutsch.hs  English.hs  EnglishSteno.hs  Francais.hs  Lojban.hs  Lojban.phs  Nederlands.hs  TokiPona.hs  TokiPona.phs  Types.hs
src/Text/Internationalisation/Lojban/: Convert.hs  Convert.phs
src/Text/Internationalisation/TokiPona/: Common.hs  Common.phs  Convert.hs  Convert.phs  SitelenEmosi.hs  SitelenLasina.hs  SitelenMunjan.hs  SitelenPona.hs  SitelenPona.phs
src/Text/PUA/: TH.hs
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  homepage.hamlet  image.hamlet  login.hamlet  register.hamlet
test/: Test.hs  UnitTest.hs
test/Test/: Codec.hs
test/Test/Codec/: CBOR.hs
test/Test/Codec/CBOR/: Class.hs
web/: package.json  tsconfig.json  webpack.config.js  yarn.nix
web/src/: index.js  index.ts  register.ts  style.scss
