cabal-version:      2.4
name:               chir-rs
version:            0.1.0.0
copyright:          2023 Charlotte ðŸ¦ Delenk
maintainer:         lotte@chir.rs
author:             Charlotte ðŸ¦ Delenk
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           Personal homepage

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  config/**/*.persistentmodels
  config/**/*.yesodroutes
  LICENSE
  messages/**/*.msg
  README.md
  templates/**/*.hamlet

flag library-only
  description: Build for use with "yesod devel"
  default:     False
  manual:      False

flag dev
  description: Turn on development settings, like auto-reload templates.
  manual:      False
  default:     False

common shared
  if (flag(dev) || flag(library-only))
    ghc-options:
      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
      -fprint-explicit-foralls -fprint-explicit-kinds -O0

    cpp-options: -DDEVELOPMENT

  else
    ghc-options:
      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
      -fprint-explicit-foralls -fprint-explicit-kinds -O3 -threaded

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    CPP
    DataKinds
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base                   >=4.13.0.0 && <4.18.0.0.0
    , base64-bytestring
    , blaze-html
    , conduit
    , conduit-extra
    , cryptonite
    , data-default
    , dhall
    , directory
    , fast-logger
    , filepath
    , hjsmin
    , hourglass
    , http-conduit
    , http-types
    , jose
    , lens
    , monad-logger
    , mtl
    , parsec
    , persistent
    , persistent-migration
    , persistent-postgresql
    , profunctors
    , random
    , relude                 >=1.0
    , resource-pool
    , resourcet
    , serialise
    , shakespeare
    , shower
    , template-haskell
    , these
    , time
    , url
    , validation
    , wai
    , wai-extra
    , warp
    , webauthn
    , with-utf8
    , yesod
    , yesod-core
    , yesod-persistent
    , yesod-static

  hs-source-dirs:     src
  default-language:   GHC2021
  other-modules:
    Components.Image
    Config
    Config.Images
    Config.StaticFiles
    Crypto.Auth.Token
    Crypto.FidoMetadataManager
    Crypto.KeyStore
    Crypto.KeyStore.Types
    Data.Queue
    Foundation
    Handler.FinishRegistration
    Handler.Home
    Handler.OauthJwks
    Handler.OauthMetadata
    Handler.Register
    Handler.StartRegistration
    Handler.WebauthnChallenge
    Handler.Webfinger
    Model
    Model.Migration
    Network.URL.Normalize
    Text.Lojban
    Text.TokiPona
    Utils

library
  import:          shared
  exposed-modules: Application

executable chir-rs
  import:        shared
  main-is:       Main.hs
  other-modules: Application

  if flag(library-only)
    buildable: True
