[package]
name = "chir-rs-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Charlotte 🦝 Delenk"]
description = "Authentication microservice for chir.rs"
repository = "https://github.com/darkkirb/chir.rs"
keywords = ["authentication", "opaque", "webauthn"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
axum = "0.6.1"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "time", "serde_json", "chrono", "r2d2"] }
dotenvy = "0.15.6"
educe = "0.4.20"
parking_lot = "0.12.1"
serde = { version = "1.0.149", features = ["derive"] }
serde_dhall = { version = "0.12.0", default-features = false }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
