[package]
name = "chir-rs-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Charlotte 🦝 Delenk"]
description = "Authentication microservice for chir.rs"
repository = "https://github.com/darkkirb/chir.rs"
keywords = ["authentication", "opaque", "webauthn"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-trait = "0.1.59"
axum = { version = "0.6.1", features = ["headers", "macros"] }
chrono = "0.4.23"
deadpool-redis = { version = "0.11.1", features = ["serde"] }
diesel = { version = "2.0.2", features = ["time", "serde_json", "chrono"] }
diesel-async = { version = "0.1.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15.6"
educe = "0.4.20"
headers = "0.3.8"
redis = { version = "0.22.1" }
rusty_paseto = { version = "0.4.0", default-features = false, features = [
    "v4_local",
    "batteries_included",
] }
serde = { version = "1.0.151", features = ["derive"] }
serde_dhall = { version = "0.12.0", default-features = false }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
