[package]
name = "chir-rs-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Charlotte 🦝 Delenk"]
description = "Authentication microservice for chir.rs"
repository = "https://github.com/darkkirb/chir.rs"
keywords = ["authentication", "opaque", "webauthn"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
argon2 = { version = "0.4.1", features = ["parallel", "rayon", "zeroize"] }
async-trait = "0.1.61"
axum = { version = "0.6.2", features = ["headers", "macros"] }
chir-rs-auth-model = { path = "../auth-model" }
chrono = { version = "0.4.23", features = ["serde"] }
deadpool-redis = { version = "0.11.1", features = ["serde"] }
diesel = { version = "2.0.2", features = ["time", "serde_json", "chrono"] }
diesel-async = { version = "0.2.0", features = ["postgres", "deadpool"] }
dotenvy = "0.15.6"
educe = "0.4.20"
headers = "0.3.8"
once_cell = "1.17.0"
opaque-ke = { version = "2.0.0", features = ["argon2", "std"] }
pasetors = "0.6.5"
rand = "0.8.5"
redis = { version = "0.22.2" }
serde = { version = "1.0.152", features = ["derive"] }
serde_dhall = { version = "0.12.0", default-features = false }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "v5"] }
webauthn-rs = { version = "0.4.8", features = [
    "danger-allow-state-serialisation",
] }
